2012-02-15  Lars Ingebrigtsen  <larsi@gnus.org>

	* imap.el: Remove.

	* nntp.el (nntp-coding-system-for-read): Remove.
	(nntp-coding-system-for-write): Ditto.
	(nntp-open-connection): Just use `binary' directly.

	* gnus-start.el (gnus-clean-old-newsrc): Delete `unexist' from pre-Ma
	Gnus 0.3.

2012-02-15  Paul Eggert  <eggert@cs.ucla.edu>

	* shr.el (shr-rescale-image): Undo previous change; see
	<http://lists.gnu.org/archive/html/emacs-devel/2012-02/msg00540.html>.

2012-02-15  Lars Magne Ingebrigtsen  <lars@ingebrigtsen.no>

	* gnus.el: Ma Gnus v0.3 is released.

2012-02-15  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-summary-local-variables): Make
	`gnus-newsgroup-unexist' into a local variable.

2012-02-14  Teodor Zlatanov  <tzz@lifelogs.com>

	* registry.el (registry-usage-test, registry-persistence-test): Move to
	tests/gnustest-registry.el.
	(registry-make-testable-db, registry-match-test)
	(registry-instantiation-test): Move to tests/gnustest-registry.el.

	* gnus-registry.el (gnus-registry-misc-test)
	(gnus-registry-usage-test): Move to tests/gnustest-registry.el.

	* tests/gnustest-registry.el: New file with the registry and
	gnus-registry ERT tests.

2012-02-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-msg.el (gnus-summary-resend-message): Make
	gnus-summary-resend-message-insert-gcc be last item in
	message-header-setup-hook.

2012-02-13  Lars Ingebrigtsen  <larsi@gnus.org>

	* nnfolder.el (nnfolder-marks-directory, nnfolder-marks-is-evil)
	(nnfolder-marks, nnfolder-marks-file-suffix, nnfolder-marks-modtime):
	Remove.
	(nnfolder-open-server): Don't use marks.
	(nnfolder-request-delete-group): Ditto.
	(nnfolder-request-rename-group): Ditto.
	(nnfolder-request-set-mark, nnfolder-request-marks)
	(nnfolder-group-marks-pathname, nnfolder-marks-changed-p)
	(nnfolder-save-marks, nnfolder-open-marks): Remove.

	* nnml.el (nnml-marks-is-evil, nnml-marks-file-name, nnml-marks)
	(nnml-marks-modtime): Remove.